kubernetes/rolling-update/deployment_blue.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grid
  labels:
    app: grid
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        
      maxUnavailable: 0  
  selector:
    matchLabels:
      app: grid
  template:
    metadata:
      labels:
        app: grid
        color: blue                
    spec:
      containers:
      - name: app
        image: breizhcamp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080        
          initialDelaySeconds: 5
          periodSeconds: 1
