kubernetes/rolling-update/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grid
spec:
  rules:
  - host: breizhcamp.tes
    http:
      paths:
       - backend:
          serviceName: grid
          servicePort: 80
